--- a/anime-detail.html
+++ b/anime-detail.html
@@ -238,6 +238,7 @@
   <audio id="akujiki-ost" loop><source src="akujiki.mp3" type="audio/mpeg"></audio>
   <audio id="saigonihitotsu-ost" loop><source src="saigonihitotsu.mp3" type="audio/mpeg"></audio>
   <audio id="syn-ost" loop><source src="syn.mp3" type="audio/mpeg"></audio>
+  <audio id="record-ost" loop><source src="record.mp3" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -3628,6 +3629,74 @@
           }
         ]
       },
+      62: {
+        title: "Record of Ragnarok",
+        desc: "En el Concejo del Valhalla, los dioses acuerdan unánimemente extinguir a la raza humana. Pero Brunilda, la mayor de las hermanas valquirias, se opone. En el primer combate de la batalla de Ragnarok, Lü Bu, el caudillo militar de la dinastía Han, lucha contra el dios nórdico Thor y sorprende a los dioses presentes.",
+        cover: "recordpor.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "recordt11.jpg",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "recordt2.jpg",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+              { title: "Capítulo 14"},
+              { title: "Capítulo 15"},
+            ]
+          },
+          {
+            num: 3,
+            cover: "recordt3.jpg",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+              { title: "Capítulo 14"},
+              { title: "Capítulo 15"},
+            ]
+          }
+        ]
+      },
+
 
 
 
@@ -3840,6 +3909,7 @@
         59: ['akujiki-ost'],
         60: ['saigonihitotsu-ost'],
         61: ['syn-ost'],
+        62: ['record-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
