--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
         <option>Mahō Shōjo</option>
         <option>Mecha</option>
         <option>Militar</option>
+        <option>Mitología</option>
         <option>Misterio</option>
         <option>Musical</option>
         <option>Nekketsu</option>
@@ -291,6 +292,7 @@
         <option>Sobrenatural</option>
         <option>Steampunk</option>
         <option>Superhéroes</option>
+        <option>Survival</option>
         <option>Survival Game</option>
         <option>Tentáculos</option>
         <option>Terror</option>
@@ -433,6 +435,7 @@
       {id:59, title:"Akujiki Reijō to Kyōketsu Kōshaku", aliases: ["Pass the Monster Meat, Milady!"], img:"akujiki.jpg", rating:4.5, genres:["Fantasía","Comedia","Cocina","Romance","Shōjo"]},
       {id:60, title:"Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka", aliases: ["May I Ask for One Final Thing?"], img:"saigo ni hitotsu.jpg", rating:4.7, genres:["Acción","Fantasía","Comedia","Drama","Romance","Shōjo"]},
       {id:61, title:"Ataque a los titanes", aliases: ["Attack on Titan","Shingeki no Kyojin"], img:"synt.jpg", rating:4.9, genres:["Acción","Fantasía oscura","Post-apocalíptico","Drama","Misterio","Aventura","Thriller","Shōnen"]},
+      {id:62, title:"Record of Ragnarok", aliases: ["Shūmatsu no Valkyrie"], img:"recordpor.jpg", rating:4.7, genres:["Acción","Fantasía","Sobrenatural","Drama","Mitología","Survival","Seinen"]},
     ];
 
     /* ----------------------------
