--- a/video-player.html
+++ b/video-player.html
@@ -2523,10 +2523,10 @@
           "25": { link:'https://drive.google.com/file/d/12Hjq7yGQ435reizBTrBL26LQLu5d69rd/preview', title:'Ataque a los titanes T1 Cap 25' },
         },
         "2": {
-          "1": { link:'/preview', title:'Ataque a los titanes OVA 1: El Diario de Ilse' },
+          "1": { link:'https://drive.google.com/file/d/17l6KPMy1GimYldh8pxF4jSuHKw1dnBr7/preview', title:'Ataque a los titanes OVA 1: El Diario de Ilse' },
         },
         "3": {
-          "1": { link:'/preview', title:'Ataque a los titanes OVA 2: Sin Arrepentimientos' },
+          "1": { link:'https://drive.google.com/file/d/1vxon6agZU6ux-mMdFRubeCyiQEEvgrLO/preview', title:'Ataque a los titanes OVA 2: Sin Arrepentimientos' },
         },
         "4": {
           "1": { link:'https://drive.google.com/file/d/1enG3tjnC1meuN5QlPEHfsKX7Le_F_wJ9/preview', title:'Ataque a los titanes T2 Cap 1' },
@@ -2543,63 +2543,63 @@
           "12": { link:'https://drive.google.com/file/d/1cif0J5y9Z4NUUPsKAuiSn08zetyjyqBA/preview', title:'Ataque a los titanes T2 Cap 12' },
         },
         "5": {
-          "1": { link:'/preview', title:'Ataque a los titanes OVA 3: Chicas Perdidas' },
+          "1": { link:'https://drive.google.com/file/d/1aPVPAGXa653K5-CvAEi2hmTzxtmg9TEV/preview', title:'Ataque a los titanes OVA 3: Chicas Perdidas' },
         },
         "6": {
-          "1": { link:'https://drive.google.com/file/d/1VrB3QXkMogEIyr5oPAeMZRgH_o9XBo41/preview', title:'Ataque a los titanes T1 Cap 1' },
-          "2": { link:'https://drive.google.com/file/d/14vEnS_TuS-oa8o2kwvVV8y3nJYzrqrrf/preview', title:'Ataque a los titanes T1 Cap 2' },
-          "3": { link:'https://drive.google.com/file/d/1qYifdvQ8IMnI5uZytUHW3hmf5jJwdPF8/preview', title:'Ataque a los titanes T1 Cap 3' },
-          "4": { link:'https://drive.google.com/file/d/1mku8IXFDuME6ozjuwR9r3GyN8HTOGYVv/preview', title:'Ataque a los titanes T1 Cap 4' },
-          "5": { link:'https://drive.google.com/file/d/1sSkQA17-0jQzvRCoDHK3GqY3n6MXv1Zl/preview', title:'Ataque a los titanes T1 Cap 5' },
-          "6": { link:'https://drive.google.com/file/d/1Rk6jTzuVqDDcEvTGVzweA9_WjdY9BbIV/preview', title:'Ataque a los titanes T1 Cap 6' },
-          "7": { link:'https://drive.google.com/file/d/1LcGsG8VELrzgd0fCl_YA9MdiyMkkLJ-G/preview', title:'Ataque a los titanes T1 Cap 7' },
-          "8": { link:'https://drive.google.com/file/d/1jpWgrQU2m3ywaWM0ZZhSKjnizTrjZOTR/preview', title:'Ataque a los titanes T1 Cap 8' },
-          "9": { link:'https://drive.google.com/file/d/1c6kYj8mBV7YanoH_isPLGLuRiOwkIU_N/preview', title:'Ataque a los titanes T1 Cap 9' },
-          "10": { link:'https://drive.google.com/file/d/13SJ1S3iJMdVB03Tpgk6EzCaWn9UI-KFe/preview', title:'Ataque a los titanes T1 Cap 10' },
-          "11": { link:'https://drive.google.com/file/d/1ZfqlNGzipFANJ_NH-IAMMrgxa8962bEA/preview', title:'Ataque a los titanes T1 Cap 11' },
-          "12": { link:'https://drive.google.com/file/d/1UKpPZKJWpG_1ol8ZD4aQg9WgVduyebWR/preview', title:'Ataque a los titanes T1 Cap 12' },
-          "13": { link:'https://drive.google.com/file/d/1MPMnGdd8JJVfIY5ddBjYWun3o74ERLag/preview', title:'Ataque a los titanes T1 Cap 13' },
-          "14": { link:'https://drive.google.com/file/d/1gTr6UhSmoB9D8XCSR9cZWMVvVujmlNjl/preview', title:'Ataque a los titanes T1 Cap 14' },
-          "15": { link:'https://drive.google.com/file/d/185dXatdSrl-DSX0sok1zFfPm2m1XhhyT/preview', title:'Ataque a los titanes T1 Cap 15' },
-          "16": { link:'https://drive.google.com/file/d/1Uk5q2aY-DHeBfNJ6XRJ_UeJAJLxrnAXK/preview', title:'Ataque a los titanes T1 Cap 16' },
-          "17": { link:'https://drive.google.com/file/d/1CLVayaAhlrKw9dA57xzpI1u5FFQOI6uP/preview', title:'Ataque a los titanes T1 Cap 17' },
-          "18": { link:'https://drive.google.com/file/d/1rUSeYv_MMnDy_FObI04IGziNuoilldcm/preview', title:'Ataque a los titanes T1 Cap 18' },
-          "19": { link:'https://drive.google.com/file/d/1Avw1Gwo4d38UcuXNBWxs-x6o9hdTIFVj/preview', title:'Ataque a los titanes T1 Cap 19' },
-          "20": { link:'https://drive.google.com/file/d/14QaWZ-HFewPAYBIvr-pVBr9gkCT6T1O9/preview', title:'Ataque a los titanes T1 Cap 20' },
-          "21": { link:'https://drive.google.com/file/d/1x7S0hsD1FElBHe7qomxj7X7uf1Cfj6qG/preview', title:'Ataque a los titanes T1 Cap 21' },
-          "22": { link:'https://drive.google.com/file/d/1twaKDmKjYN1dOOcgSXRUNObhZove0lJ7/preview', title:'Ataque a los titanes T1 Cap 22' },
+          "1": { link:'https://drive.google.com/file/d/1VrB3QXkMogEIyr5oPAeMZRgH_o9XBo41/preview', title:'Ataque a los titanes T3 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/14vEnS_TuS-oa8o2kwvVV8y3nJYzrqrrf/preview', title:'Ataque a los titanes T3 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1qYifdvQ8IMnI5uZytUHW3hmf5jJwdPF8/preview', title:'Ataque a los titanes T3 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1mku8IXFDuME6ozjuwR9r3GyN8HTOGYVv/preview', title:'Ataque a los titanes T3 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1sSkQA17-0jQzvRCoDHK3GqY3n6MXv1Zl/preview', title:'Ataque a los titanes T3 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1Rk6jTzuVqDDcEvTGVzweA9_WjdY9BbIV/preview', title:'Ataque a los titanes T3 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1LcGsG8VELrzgd0fCl_YA9MdiyMkkLJ-G/preview', title:'Ataque a los titanes T3 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1jpWgrQU2m3ywaWM0ZZhSKjnizTrjZOTR/preview', title:'Ataque a los titanes T3 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1c6kYj8mBV7YanoH_isPLGLuRiOwkIU_N/preview', title:'Ataque a los titanes T3 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/13SJ1S3iJMdVB03Tpgk6EzCaWn9UI-KFe/preview', title:'Ataque a los titanes T3 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1ZfqlNGzipFANJ_NH-IAMMrgxa8962bEA/preview', title:'Ataque a los titanes T3 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1UKpPZKJWpG_1ol8ZD4aQg9WgVduyebWR/preview', title:'Ataque a los titanes T3 Cap 12' },
+          "13": { link:'https://drive.google.com/file/d/1MPMnGdd8JJVfIY5ddBjYWun3o74ERLag/preview', title:'Ataque a los titanes T3 Cap 13' },
+          "14": { link:'https://drive.google.com/file/d/1gTr6UhSmoB9D8XCSR9cZWMVvVujmlNjl/preview', title:'Ataque a los titanes T3 Cap 14' },
+          "15": { link:'https://drive.google.com/file/d/185dXatdSrl-DSX0sok1zFfPm2m1XhhyT/preview', title:'Ataque a los titanes T3 Cap 15' },
+          "16": { link:'https://drive.google.com/file/d/1Uk5q2aY-DHeBfNJ6XRJ_UeJAJLxrnAXK/preview', title:'Ataque a los titanes T3 Cap 16' },
+          "17": { link:'https://drive.google.com/file/d/1CLVayaAhlrKw9dA57xzpI1u5FFQOI6uP/preview', title:'Ataque a los titanes T3 Cap 17' },
+          "18": { link:'https://drive.google.com/file/d/1rUSeYv_MMnDy_FObI04IGziNuoilldcm/preview', title:'Ataque a los titanes T3 Cap 18' },
+          "19": { link:'https://drive.google.com/file/d/1Avw1Gwo4d38UcuXNBWxs-x6o9hdTIFVj/preview', title:'Ataque a los titanes T3 Cap 19' },
+          "20": { link:'https://drive.google.com/file/d/14QaWZ-HFewPAYBIvr-pVBr9gkCT6T1O9/preview', title:'Ataque a los titanes T3 Cap 20' },
+          "21": { link:'https://drive.google.com/file/d/1x7S0hsD1FElBHe7qomxj7X7uf1Cfj6qG/preview', title:'Ataque a los titanes T3 Cap 21' },
+          "22": { link:'https://drive.google.com/file/d/1twaKDmKjYN1dOOcgSXRUNObhZove0lJ7/preview', title:'Ataque a los titanes T3 Cap 22' },
         },
         "7": {
-          "1": { link:'/preview', title:'Ataque a los titanes T1 Cap 1' },
-          "2": { link:'/preview', title:'Ataque a los titanes T1 Cap 2' },
-          "3": { link:'/preview', title:'Ataque a los titanes T1 Cap 3' },
-          "4": { link:'/preview', title:'Ataque a los titanes T1 Cap 4' },
-          "5": { link:'/preview', title:'Ataque a los titanes T1 Cap 5' },
-          "6": { link:'/preview', title:'Ataque a los titanes T1 Cap 6' },
-          "7": { link:'/preview', title:'Ataque a los titanes T1 Cap 7' },
-          "8": { link:'/preview', title:'Ataque a los titanes T1 Cap 8' },
-          "9": { link:'/preview', title:'Ataque a los titanes T1 Cap 9' },
-          "10": { link:'/preview', title:'Ataque a los titanes T1 Cap 10' },
-          "11": { link:'/preview', title:'Ataque a los titanes T1 Cap 11' },
-          "12": { link:'/preview', title:'Ataque a los titanes T1 Cap 12' },
-          "13": { link:'/preview', title:'Ataque a los titanes T1 Cap 13' },
-          "14": { link:'/preview', title:'Ataque a los titanes T1 Cap 14' },
-          "15": { link:'/preview', title:'Ataque a los titanes T1 Cap 15' },
-          "16": { link:'/preview', title:'Ataque a los titanes T1 Cap 16' },
-          "17": { link:'/preview', title:'Ataque a los titanes T1 Cap 17' },
-          "18": { link:'/preview', title:'Ataque a los titanes T1 Cap 18' },
-          "19": { link:'/preview', title:'Ataque a los titanes T1 Cap 19' },
-          "20": { link:'/preview', title:'Ataque a los titanes T1 Cap 20' },
-          "21": { link:'/preview', title:'Ataque a los titanes T1 Cap 21' },
-          "22": { link:'/preview', title:'Ataque a los titanes T1 Cap 22' },
-          "23": { link:'/preview', title:'Ataque a los titanes T1 Cap 23' },
-          "24": { link:'/preview', title:'Ataque a los titanes T1 Cap 24' },
-          "25": { link:'/preview', title:'Ataque a los titanes T1 Cap 25' },
-          "26": { link:'/preview', title:'Ataque a los titanes T1 Cap 26' },
-          "27": { link:'/preview', title:'Ataque a los titanes T1 Cap 27' },
-          "28": { link:'/preview', title:'Ataque a los titanes T1 Cap 28' },
-          "29": { link:'/preview', title:'Ataque a los titanes T1 Cap 29' },
-          "30": { link:'/preview', title:'Ataque a los titanes T1 Cap 30' },
+          "1": { link:'https://drive.google.com/file/d/18PdUfRYOMB7Z59RoswIRTQki74xRCywc/preview', title:'Ataque a los titanes T4 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1nGYuFtPsaEkiBt3KnFJStXRbYq__sbdp/preview', title:'Ataque a los titanes T4 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1hcD6CffYvY6AXowVcCCsCK8NOM6_c2wI/preview', title:'Ataque a los titanes T4 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1cAhdYBFXZI0hSl6Jujgq7YplvRt79-S8/preview', title:'Ataque a los titanes T4 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1MFgBaCU00s44oOcwkw-E8fETWkT5xa1V/preview', title:'Ataque a los titanes T4 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1TVSqj0UamBQ0Lbg2MSHvSobnjzqFbqy2/preview', title:'Ataque a los titanes T4 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1MVY-pyNNARhTy3U1JNMnSbUumX84DzPs/preview', title:'Ataque a los titanes T4 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1DuRYbU-5OOxQ9ACZEf0ANnLED2_jTYdn/preview', title:'Ataque a los titanes T4 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1e44sclYG1IvUH_Hb35ubV5Y3fi3y5GwE/preview', title:'Ataque a los titanes T4 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/14PlaDdlqLRfXvKR0yAhR469QT94ID3On/preview', title:'Ataque a los titanes T4 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/18sm1RJd90oNPfbCjRYeLKUp7L-1mxdOD/preview', title:'Ataque a los titanes T4 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/12t-3C1wUHJ2Ct765uZutvu8rabmJrV3F/preview', title:'Ataque a los titanes T4 Cap 12' },
+          "13": { link:'https://drive.google.com/file/d/10a_vI4Pze3flXZqWz1_jM8OaiCKQ13wr/preview', title:'Ataque a los titanes T4 Cap 13' },
+          "14": { link:'https://drive.google.com/file/d/1qaYAQYEFrYVjaP22W-qQyZHY9LxjGl3i/preview', title:'Ataque a los titanes T4 Cap 14' },
+          "15": { link:'https://drive.google.com/file/d/1rHCl9Q31LXyl-Bbr0DyUPCnXJScX_JDN/preview', title:'Ataque a los titanes T4 Cap 15' },
+          "16": { link:'https://drive.google.com/file/d/1TfxoH-RAxAn15IZUXrdTyN2p41aGq_LQ/preview', title:'Ataque a los titanes T4 Cap 16' },
+          "17": { link:'/preview', title:'Ataque a los titanes T4 Cap 17' },
+          "18": { link:'/preview', title:'Ataque a los titanes T4 Cap 18' },
+          "19": { link:'/preview', title:'Ataque a los titanes T4 Cap 19' },
+          "20": { link:'/preview', title:'Ataque a los titanes T4 Cap 20' },
+          "21": { link:'/preview', title:'Ataque a los titanes T4 Cap 21' },
+          "22": { link:'/preview', title:'Ataque a los titanes T4 Cap 22' },
+          "23": { link:'/preview', title:'Ataque a los titanes T4 Cap 23' },
+          "24": { link:'/preview', title:'Ataque a los titanes T4 Cap 24' },
+          "25": { link:'/preview', title:'Ataque a los titanes T4 Cap 25' },
+          "26": { link:'/preview', title:'Ataque a los titanes T4 Cap 26' },
+          "27": { link:'/preview', title:'Ataque a los titanes T4 Cap 27' },
+          "28": { link:'/preview', title:'Ataque a los titanes T4 Cap 28' },
+          "29": { link:'/preview', title:'Ataque a los titanes T4 Cap 29' },
+          "30": { link:'https://drive.google.com/file/d/1z1eUcg4z0snOcs9aqH2qWRV4-rOWKa7m/preview', title:'Ataque a los titanes T4 Cap 30' },
         }
       },
 
