--- a/video-player.html
+++ b/video-player.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
@@ -1641,32 +1641,32 @@
       },
       "38": {
         "1": {
-          "1": { link:'https://www.dropbox.com/scl/fi/7it13qogxskpng3t33r7k/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-1.mp4?rlkey=t9g5f7113xwtyf6mbjembqtt7&st=fq09dxjk&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 1' },
-          "2": { link:'https://www.dropbox.com/scl/fi/mgnijca187lf973u9j60a/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-2.mp4?rlkey=4jz43pp0bcvj3l5a1be7dvzz5&st=o0znqhn8&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 2' },
-          "3": { link:'https://www.dropbox.com/scl/fi/sj88kktzaf8qx9ed7xljo/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-3.mp4?rlkey=wy69iuvlmh7x2js4j397agtk8&st=wnvaf59f&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 3' },
-          "4": { link:'https://www.dropbox.com/scl/fi/2itzs0vpwsc83ezq52ecc/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-4.mp4?rlkey=aeivlg67qog855fc8nrtayc9k&st=uj37k0xc&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 4' },
-          "5": { link:'https://www.dropbox.com/scl/fi/gi5bze5tdto8sqqmqgx2k/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-5.mp4?rlkey=adksi8p05lakvgfeup6s5dfll&st=nhjxi2ju&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 5' },
-          "6": { link:'https://www.dropbox.com/scl/fi/6nhcigx3bgzvmnevyfuvn/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-6.mp4?rlkey=4awiemograz7ybeqrdkc3zc39&st=olaqr8j9&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 6' },
-          "7": { link:'https://www.dropbox.com/scl/fi/26x81ampnuak28jjyfqnp/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-7.mp4?rlkey=ribx3p8xisak7f04rodx07s6p&st=x1rzd2li&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 7' },
-          "8": { link:'https://www.dropbox.com/scl/fi/hx262tp656vrgqqge6acz/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-8.mp4?rlkey=c16w2rs2xrqy7l6c7agt0yus1&st=db3vrdec&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 8' },
-          "9": { link:'https://www.dropbox.com/scl/fi/cwlsky34094gqngv37787/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-9.mp4?rlkey=z46bychyrzephlaips7xsrbxx&st=fxiogkp3&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 9' },
-          "10": { link:'https://www.dropbox.com/scl/fi/3lwj55rt0huifuq4ku4qq/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-10.mp4?rlkey=xova0khft3lf8yz5eqwigghc4&st=mi3zq9zm&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 10' },
-          "11": { link:'https://www.dropbox.com/scl/fi/snhwk0qqvmwwjcqr48ezz/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-11.mp4?rlkey=ywz1zal9jd5vuip992nai98ua&st=zslkil6m&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 11' },
-          "12": { link:'https://www.dropbox.com/scl/fi/1zmx9lswcsas0l4vzefso/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-12.mp4?rlkey=30wdnfrjh1dimvowabtatjfuq&st=tnj8bif1&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 12' },
+          "1": { link:'https://drive.google.com/file/d/1t0BEvVXhzrfZGryyEP1nPob6gV8I3mlA/preview', link2:'https://www.dropbox.com/scl/fi/7it13qogxskpng3t33r7k/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-1.mp4?rlkey=t9g5f7113xwtyf6mbjembqtt7&st=fq09dxjk&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1OgnNnXaVpAwa0k2yte2ZwMogDnduep3a/preview', link2:'https://www.dropbox.com/scl/fi/mgnijca187lf973u9j60a/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-2.mp4?rlkey=4jz43pp0bcvj3l5a1be7dvzz5&st=o0znqhn8&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1y81WKm7mUU16Yl1FfvQzczlhbPwn3IkN/preview', link2:'https://www.dropbox.com/scl/fi/sj88kktzaf8qx9ed7xljo/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-3.mp4?rlkey=wy69iuvlmh7x2js4j397agtk8&st=wnvaf59f&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1EP5GuFYDU5sPvGzIrqAJCSZ4D9CeRLlD/preview', link2:'https://www.dropbox.com/scl/fi/2itzs0vpwsc83ezq52ecc/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-4.mp4?rlkey=aeivlg67qog855fc8nrtayc9k&st=uj37k0xc&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1gxcj0vu64hVjJLCh2EWbRCmOFQrjZtHY/preview', link2:'https://www.dropbox.com/scl/fi/gi5bze5tdto8sqqmqgx2k/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-5.mp4?rlkey=adksi8p05lakvgfeup6s5dfll&st=nhjxi2ju&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/13MNSV7qVEyy8ZElFFAOnVY-Yt2nDp9as/preview', link2:'https://www.dropbox.com/scl/fi/6nhcigx3bgzvmnevyfuvn/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-6.mp4?rlkey=4awiemograz7ybeqrdkc3zc39&st=olaqr8j9&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1vEBs6UeKJxZ6AZUq3vwlBe8fj2ly4RrX/preview', link2:'https://www.dropbox.com/scl/fi/26x81ampnuak28jjyfqnp/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-7.mp4?rlkey=ribx3p8xisak7f04rodx07s6p&st=x1rzd2li&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1dhdS37nvxsOCQCefCrsFyBIUTr_qtsbq/preview', link2:'https://www.dropbox.com/scl/fi/hx262tp656vrgqqge6acz/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-8.mp4?rlkey=c16w2rs2xrqy7l6c7agt0yus1&st=db3vrdec&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1xJISJbYsUdSIsrVZvTP40yUnD94bswiF/preview', link2:'https://www.dropbox.com/scl/fi/cwlsky34094gqngv37787/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-9.mp4?rlkey=z46bychyrzephlaips7xsrbxx&st=fxiogkp3&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/1zUtlyfbh1TITf9jHcpRsmeCH54F46AkU/preview', link2:'https://www.dropbox.com/scl/fi/3lwj55rt0huifuq4ku4qq/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-10.mp4?rlkey=xova0khft3lf8yz5eqwigghc4&st=mi3zq9zm&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1liV1HxhgLjw_oIQfrP2YUWRAeCU8sAJ6/preview', link2:'https://www.dropbox.com/scl/fi/snhwk0qqvmwwjcqr48ezz/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-11.mp4?rlkey=ywz1zal9jd5vuip992nai98ua&st=zslkil6m&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1FMIx7MDuwsOOqtEMLj5Gvm0TzlknrQk3/preview', link2:'https://www.dropbox.com/scl/fi/1zmx9lswcsas0l4vzefso/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-12.mp4?rlkey=30wdnfrjh1dimvowabtatjfuq&st=tnj8bif1&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 12' },
         },
         "2": {
-          "1": { link:'https://www.dropbox.com/scl/fi/0qx2fx59dkot465vfywqf/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-1.mp4?rlkey=nzdpkttstqfdkxuq932xgaiby&st=wsmgje8f&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 1' },
-          "2": { link:'https://www.dropbox.com/scl/fi/sobntl64dm2eo44ef5ryy/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-2.mp4?rlkey=v6ok42s6rqoma04p5y3u0wm2a&st=7e9eolm2&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 2' },
-          "3": { link:'https://www.dropbox.com/scl/fi/y1csrwcf8f9ku9mlufmih/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-3.mp4?rlkey=isr6chccv32oi3b8shdpvdkqq&st=1xnp3fpc&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 3' },
-          "4": { link:'https://www.dropbox.com/scl/fi/hr4qe7up0ulctkf4axkq0/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-4.mp4?rlkey=p3d6ywbmwm4ifkfdi4n77ippe&st=t9qvmn0x&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 4' },
-          "5": { link:'https://www.dropbox.com/scl/fi/9vv7rnd97cz2zq0nsvblj/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-5.mp4?rlkey=spaz769aesd6dubfhexbam42v&st=4uvjz97b&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 5' },
-          "6": { link:'https://www.dropbox.com/scl/fi/l3j30kzewfrtv029zkelg/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-6.mp4?rlkey=36ga0yx4wczpdrwn0ofp045vz&st=e7ih4ib7&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 6' },
-          "7": { link:'https://www.dropbox.com/scl/fi/eqtqimato4c2phs7t8j74/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-7.mp4?rlkey=n8r3v9zeu8cszoj7ayazgjhwz&st=e930htcz&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 7' },
-          "8": { link:'https://www.dropbox.com/scl/fi/1wvmj8fmfwwiak20wlr8a/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-8.mp4?rlkey=ohpgi3nlqd8hfg6luqqu3mm9y&st=2ttkca9o&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 8' },
-          "9": { link:'https://www.dropbox.com/scl/fi/8cnibsntbjnalp7n63nrn/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-9.mp4?rlkey=lenn5j8e6c3owaxxmjalwfptg&st=heqjpkah&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 9' },
-          "10": { link:'https://www.dropbox.com/scl/fi/is8vw0u2w37e69jq2lccn/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-10.mp4?rlkey=dy9gmcfifx3ch6o90m9cghglc&st=zgaakmzv&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 10' },
-          "11": { link:'https://www.dropbox.com/scl/fi/k3urd1z3wp6tu2wc39gp7/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-11.mp4?rlkey=0zsovrj8rea381c88nscrjp52&st=y5x7fgip&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 11' },
-          "12": { link:'https://www.dropbox.com/scl/fi/a81grwewzchv59hf3vxay/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-12.mp4?rlkey=2v8q51rlortffc5syoc9umsqh&st=de0z0lnv&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 12' },
+          "1": { link:'https://drive.google.com/file/d/1zpE44w2c_Iejlp28Rw4cOCQB6hG7kOuB/preview', link2:'https://www.dropbox.com/scl/fi/0qx2fx59dkot465vfywqf/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-1.mp4?rlkey=nzdpkttstqfdkxuq932xgaiby&st=wsmgje8f&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1zVZYOOBMkpUttjsoLVscKVC6yDnwTLfy/preview', link2:'https://www.dropbox.com/scl/fi/sobntl64dm2eo44ef5ryy/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-2.mp4?rlkey=v6ok42s6rqoma04p5y3u0wm2a&st=7e9eolm2&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1O88oaygHThv1vTBxNs8Ju5fH8A1510ag/preview', link2:'https://www.dropbox.com/scl/fi/y1csrwcf8f9ku9mlufmih/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-3.mp4?rlkey=isr6chccv32oi3b8shdpvdkqq&st=1xnp3fpc&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1iMBpkxmPDKPMp7QAwHpok4zmCiQeqBst/preview', link2:'https://www.dropbox.com/scl/fi/hr4qe7up0ulctkf4axkq0/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-4.mp4?rlkey=p3d6ywbmwm4ifkfdi4n77ippe&st=t9qvmn0x&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1ud0AgP2B6sXRW4NumvxtkZYovEJtUioa/preview', link2:'https://www.dropbox.com/scl/fi/9vv7rnd97cz2zq0nsvblj/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-5.mp4?rlkey=spaz769aesd6dubfhexbam42v&st=4uvjz97b&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1MC_BJ9GEAyFoBpUsjhsOYKgq8h0l7MIl/preview', link2:'https://www.dropbox.com/scl/fi/l3j30kzewfrtv029zkelg/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-6.mp4?rlkey=36ga0yx4wczpdrwn0ofp045vz&st=e7ih4ib7&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1cxTIko2Pv7R7ScAQ7fcib5pNFZ93Se8E/preview', link2:'https://www.dropbox.com/scl/fi/eqtqimato4c2phs7t8j74/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-7.mp4?rlkey=n8r3v9zeu8cszoj7ayazgjhwz&st=e930htcz&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1AaAL_3oAzJZaIUMrkHtZQmOQSxJiO_S6/preview', link2:'https://www.dropbox.com/scl/fi/1wvmj8fmfwwiak20wlr8a/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-8.mp4?rlkey=ohpgi3nlqd8hfg6luqqu3mm9y&st=2ttkca9o&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1g0JlNj58MzAG5n1BBlwxigCNflWrAQgQ/preview', link2:'https://www.dropbox.com/scl/fi/8cnibsntbjnalp7n63nrn/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-9.mp4?rlkey=lenn5j8e6c3owaxxmjalwfptg&st=heqjpkah&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/1B6O4Kywyvee3Hcs4mamf0PhJZanXcw6y/preview', link2:'https://www.dropbox.com/scl/fi/is8vw0u2w37e69jq2lccn/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-10.mp4?rlkey=dy9gmcfifx3ch6o90m9cghglc&st=zgaakmzv&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1hJKsOGAiKe5g3qd6l7V52EMljtrdeVWZ/preview', link2:'https://www.dropbox.com/scl/fi/k3urd1z3wp6tu2wc39gp7/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-11.mp4?rlkey=0zsovrj8rea381c88nscrjp52&st=y5x7fgip&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/13Kp_3XnOVR4-A3FxIUASu2nOX_9NtfDY/preview', link2:'https://www.dropbox.com/scl/fi/a81grwewzchv59hf3vxay/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-12.mp4?rlkey=2v8q51rlortffc5syoc9umsqh&st=de0z0lnv&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 12' },
         }
       },
       "39": {
@@ -2523,12 +2523,15 @@
           "25": { link:'https://drive.google.com/file/d/12Hjq7yGQ435reizBTrBL26LQLu5d69rd/preview', title:'Ataque a los titanes T1 Cap 25' },
         },
         "2": {
-          "1": { link:'https://drive.google.com/file/d/17l6KPMy1GimYldh8pxF4jSuHKw1dnBr7/preview', title:'Ataque a los titanes OVA 1: El Diario de Ilse' },
+          "1": { link:'https://drive.google.com/file/d/17l6KPMy1GimYldh8pxF4jSuHKw1dnBr7/preview', title:'Ataque a los titanes OVA 1: El cuaderno de Ilse' },
         },
         "3": {
-          "1": { link:'https://drive.google.com/file/d/1vxon6agZU6ux-mMdFRubeCyiQEEvgrLO/preview', title:'Ataque a los titanes OVA 2: Sin Arrepentimientos' },
+          "1": { link:'https://drive.google.com/file/d/1t2WKQtU6qWwtlYLRJKFwlYgxytovGntV/preview', title:'Ataque a los titanes OVA 2: Un invitado inesperado' },
         },
         "4": {
+          "1": { link:'https://drive.google.com/file/d/1aPVPAGXa653K5-CvAEi2hmTzxtmg9TEV/preview', title:'Ataque a los titanes OVA 3: Complicaciones' },
+        },
+        "5": {
           "1": { link:'https://drive.google.com/file/d/1enG3tjnC1meuN5QlPEHfsKX7Le_F_wJ9/preview', title:'Ataque a los titanes T2 Cap 1' },
           "2": { link:'https://drive.google.com/file/d/1hMZa0BArAHtjwDPMeRmNdCUQ3l1aElSF/preview', title:'Ataque a los titanes T2 Cap 2' },
           "3": { link:'https://drive.google.com/file/d/1OV_k4XaE-F-CW-OwCCOGpkFpaF12bB8E/preview', title:'Ataque a los titanes T2 Cap 3' },
@@ -2541,9 +2544,6 @@
           "10": { link:'https://drive.google.com/file/d/10AFVWJmF_wu1RuzpetleYVisHeecC6Ib/preview', title:'Ataque a los titanes T2 Cap 10' },
           "11": { link:'https://drive.google.com/file/d/1cick9lHzI8Z0oZsixfadoWZcI1SAP5E-/preview', title:'Ataque a los titanes T2 Cap 11' },
           "12": { link:'https://drive.google.com/file/d/1cif0J5y9Z4NUUPsKAuiSn08zetyjyqBA/preview', title:'Ataque a los titanes T2 Cap 12' },
-        },
-        "5": {
-          "1": { link:'https://drive.google.com/file/d/1aPVPAGXa653K5-CvAEi2hmTzxtmg9TEV/preview', title:'Ataque a los titanes OVA 3: Chicas Perdidas' },
         },
         "6": {
           "1": { link:'https://drive.google.com/file/d/1VrB3QXkMogEIyr5oPAeMZRgH_o9XBo41/preview', title:'Ataque a los titanes T3 Cap 1' },
@@ -2586,18 +2586,18 @@
           "14": { link:'https://drive.google.com/file/d/1qaYAQYEFrYVjaP22W-qQyZHY9LxjGl3i/preview', title:'Ataque a los titanes T4 Cap 14' },
           "15": { link:'https://drive.google.com/file/d/1rHCl9Q31LXyl-Bbr0DyUPCnXJScX_JDN/preview', title:'Ataque a los titanes T4 Cap 15' },
           "16": { link:'https://drive.google.com/file/d/1TfxoH-RAxAn15IZUXrdTyN2p41aGq_LQ/preview', title:'Ataque a los titanes T4 Cap 16' },
-          "17": { link:'/preview', title:'Ataque a los titanes T4 Cap 17' },
-          "18": { link:'/preview', title:'Ataque a los titanes T4 Cap 18' },
-          "19": { link:'/preview', title:'Ataque a los titanes T4 Cap 19' },
-          "20": { link:'/preview', title:'Ataque a los titanes T4 Cap 20' },
-          "21": { link:'/preview', title:'Ataque a los titanes T4 Cap 21' },
-          "22": { link:'/preview', title:'Ataque a los titanes T4 Cap 22' },
-          "23": { link:'/preview', title:'Ataque a los titanes T4 Cap 23' },
-          "24": { link:'/preview', title:'Ataque a los titanes T4 Cap 24' },
-          "25": { link:'/preview', title:'Ataque a los titanes T4 Cap 25' },
-          "26": { link:'/preview', title:'Ataque a los titanes T4 Cap 26' },
-          "27": { link:'/preview', title:'Ataque a los titanes T4 Cap 27' },
-          "28": { link:'/preview', title:'Ataque a los titanes T4 Cap 28' },
+          "17": { link:'https://drive.google.com/file/d/1GOD7lZEz72kMAXYkPMH7vkO1aENd0Xij/preview', title:'Ataque a los titanes T4 Cap 17' },
+          "18": { link:'https://drive.google.com/file/d/19Q8pJEPtBxXl5ORsNqg0f9nr9fLQSSr2/preview', title:'Ataque a los titanes T4 Cap 18' },
+          "19": { link:'https://drive.google.com/file/d/1NcVwvENI9xoOePij7vHCMu4GBCtOxH0V/preview', title:'Ataque a los titanes T4 Cap 19' },
+          "20": { link:'https://drive.google.com/file/d/1EJn1up2gXC3AMJRuXE-6xbXClpYdkKoz/preview', title:'Ataque a los titanes T4 Cap 20' },
+          "21": { link:'https://drive.google.com/file/d/1ZjI5gisz-uO9lbcFezT8E6-N8ptfCAcX/preview', title:'Ataque a los titanes T4 Cap 21' },
+          "22": { link:'https://drive.google.com/file/d/1khomaQw8Ea71OM1jQCURJGulfP6J7ZFT/preview', title:'Ataque a los titanes T4 Cap 22' },
+          "23": { link:'https://drive.google.com/file/d/1g8v5Wa-rqYE-bPgrcBPqrcN7_9N4KSTY/preview', title:'Ataque a los titanes T4 Cap 23' },
+          "24": { link:'https://drive.google.com/file/d/1miy7ROUMAV7R7fVj2dQ6Kgn6pCpJBOVK/preview', title:'Ataque a los titanes T4 Cap 24' },
+          "25": { link:'https://drive.google.com/file/d/1XEYx2HOGXEFfFk6rsRMYPKniOlj7LQMl/preview', title:'Ataque a los titanes T4 Cap 25' },
+          "26": { link:'https://drive.google.com/file/d/1mACsYgRFF31AwwdTHOzPBKGUvd3Kk_G9/preview', title:'Ataque a los titanes T4 Cap 26' },
+          "27": { link:'https://drive.google.com/file/d/1w-v2LERPGSd3scQddNmMdnYQiETD8Qem/preview', title:'Ataque a los titanes T4 Cap 27' },
+          "28": { link:'https://drive.google.com/file/d/18lix3F2jZxIprgi5NhoBTfLHDHf9XT6L/preview', title:'Ataque a los titanes T4 Cap 28' },
           "29": { link:'/preview', title:'Ataque a los titanes T4 Cap 29' },
           "30": { link:'https://drive.google.com/file/d/1z1eUcg4z0snOcs9aqH2qWRV4-rOWKa7m/preview', title:'Ataque a los titanes T4 Cap 30' },
         }
