--- a/anime-detail.html
+++ b/anime-detail.html
@@ -3523,7 +3523,7 @@
 	    name: "Ova 1",
             cover: "synova1.jpg",
             eps: [
-              { title: "OVA 1: El Diario de Ilse"},
+              { title: "OVA 1: El cuaderno de Ilse"},
             ]
           },
           {
@@ -3531,11 +3531,19 @@
 	    name: "Ova 2",
             cover: "synova2.jpg",
             eps: [
-              { title: "OVA 2: Sin Arrepentimientos"},
+              { title: "OVA 2: Un invitado inesperado"},
             ]
           },
           {
             num: 4,
+	    name: "Ova 3",
+            cover: "synova3.jpg",
+            eps: [
+              { title: "OVA 3: 'Complicaciones"},
+            ]
+          },
+          {
+            num: 5,
 	    name: "Temporada 2",
             cover: "synt2.jpg",
             eps: [
@@ -3551,14 +3559,6 @@
               { title: "Capítulo 10"},
               { title: "Capítulo 11"},
               { title: "Capítulo 12"},
-            ]
-          },
-          {
-            num: 5,
-	    name: "Ova 3",
-            cover: "synova3.jpg",
-            eps: [
-              { title: "OVA 3: Chicas Perdidas"},
             ]
           },
           {
